--- a/src/pages/MainPage/MainPage.scss
+++ b/src/pages/MainPage/MainPage.scss
@@ -9,5 +9,6 @@
         align-items: start;
         grid-template-columns: repeat(3, 1fr);
         gap: 36px;
+        justify-content: center;
     }
 }
