--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -2,4 +2,10 @@
     display: flex;
     justify-content: space-between;
     flex: 1;
+    gap: 24px;
+}
+.repo-info {
+    display: flex;
+    gap: 24px;
+    align-items: center;
 }
