--- a/src/components/ToDoList/ToDoList.scss
+++ b/src/components/ToDoList/ToDoList.scss
@@ -1,27 +1,26 @@
+@use '../../styles/variables.scss' as variables;
+
 .todo-list {
-    min-width: 400px;
+    width: 400px;
+    flex-shrink: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
     &__headline {
-        font-size: 24px;
-        margin-bottom: 24px;
+        font-size: variables.$headline;
+        margin-bottom: variables.$margin;
     }
 
     &__container {
-        // gap: 12px;
-        background-color: #111013;
-        border: 1px solid #312e38;
-       
         border-radius: 12px;
         max-height: 100vh;
         overflow-y: scroll;
     }
 
     .highlighted {
-        border: 1px solid #585069;
-        background-color: #17161a;
+        border: 2px solid variables.$border-color;
+        opacity: 0.5;
     }
 }
