--- a/src/components/DropIndicator/DropIndicator.scss
+++ b/src/components/DropIndicator/DropIndicator.scss
@@ -1,10 +1,12 @@
+@use '../../styles/variables.scss' as variables;
+
 .drop-indicator {
     flex-shrink: 0;
     width: 100%;
     height: 2px;
-    background-color: #5A54F9;
+    background-color: variables.$primary-color;
     border-radius: 2px;
-    margin: 12px 0;
+    margin: variables.$small-margin 0;
     opacity: 0;
     transition: all 300ms ease;
 }
