--- a/src/pages/MainPage/MainPage.scss
+++ b/src/pages/MainPage/MainPage.scss
@@ -1,14 +1,23 @@
-.main-page {
+@use '../../styles/variables.scss' as variables;
 
+.main-page {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+
+    & > *:not(:last-child) {
+        margin-bottom: variables.$small-margin;
+    }
     &__repo-info {
         display: flex;
     }
 
     &__work-area {
-        display: grid;
-        align-items: start;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 36px;
+        display: flex;
         justify-content: center;
+        gap: variables.$margin;
+        flex-wrap: wrap;
+        align-items: start;
     }
 }
