test implementation + style fixes + fixed search bar

--- a/src/components/ToDoList/ToDoList.scss
+++ b/src/components/ToDoList/ToDoList.scss
@@ -1,8 +1,7 @@
 @use '../../styles/variables.scss' as variables;
 
 .todo-list {
-    width: 400px;
-    flex-shrink: 0;
+    min-width: 250px;
     display: flex;
     flex-direction: column;
     justify-content: center;
