--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,6 +2,7 @@ $border-color: #585069;
 $hover-color: #2F2F45;
 $primary-color: #5A54F9;
 
+$large-margin: 48px;
 $big-margin: 32px;
 $margin: 24px;
 $small-margin: 12px;
