--- a/src/components/ToDoList/ToDoList.scss
+++ b/src/components/ToDoList/ToDoList.scss
@@ -1,7 +1,7 @@
 @use '../../styles/variables.scss' as variables;
 
 .todo-list {
-    min-width: 250px;
+    min-width: variables.$card-min-size;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -13,13 +13,13 @@
     }
 
     &__container {
-        border-radius: 12px;
+        border-radius: variables.$border-radius;
         max-height: 100vh;
         overflow-y: scroll;
     }
 
     .highlighted {
-        border: 2px solid variables.$border-color;
+        border: variables.$border-thickness solid variables.$border-color;
         opacity: 0.5;
     }
 }
