--- a/src/pages/MainPage/MainPage.scss
+++ b/src/pages/MainPage/MainPage.scss
@@ -20,11 +20,11 @@
         flex-wrap: wrap;
         align-items: start;
 
-        @media (max-width: 946px) and (min-width: 671px) {
+        @media (max-width: variables.$tablet) and (min-width: variables.$mobile) {
             grid-template-columns: repeat(2, 1fr);
         }
 
-        @media (max-width: 670px) {
+        @media (max-width:  variables.$mobile) {
             grid-template-columns: repeat(1, 1fr);
         }
     }
