--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -12,8 +12,8 @@ main {
     min-height: 100vh;
     padding: 0 variables.$large-margin;
 
-    @media (max-width: 700px) {
-            padding: 0;
+    @media (max-width: variables.$tablet) {
+        padding: 0;
     }
 }
 
@@ -28,5 +28,23 @@ main {
     &__container {
         padding: variables.$margin;
     }
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+    width: variables.$border-thickness;
+    height: 100%;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: variables.$border-color;
+    border-radius: variables.$border-radius;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+    border-radius: variables.$border-radius;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: variables.$hover-color;
 }
 
