--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,5 +7,14 @@ $big-margin: 32px;
 $margin: 24px;
 $small-margin: 12px;
 
+$border-thickness: 2px;
+$border-radius: 12px;
+
 $headline: 1.25rem;
 $text: 1rem;
+
+$card-min-size: 250px;
+
+$desktop: 1099px;
+$tablet: 980px;
+$mobile: 670px;
