--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,9 @@
 $border-color: #585069;
 $hover-color: #2F2F45;
+$indicator-border-color: #58506960;
+$indicator-color: #2f2f453d;
 $primary-color: #5A54F9;
+$primary-color-shade: #5954f944;
 
 $large-margin: 48px;
 $big-margin: 32px;
@@ -14,6 +17,7 @@ $headline: 1.25rem;
 $text: 1rem;
 
 $card-min-size: 250px;
+$drop-indicator-min-size: 180px;
 
 $desktop: 1099px;
 $tablet: 980px;
